{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 95,
  "lineage": "039b8063-b3dd-21d6-0310-f23442b46a0f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:557533685573:instance/i-0bae47d54e5f364bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bae47d54e5f364bc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudra",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e79db6997a48857",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_ip": "10.0.1.125",
            "public_ip": "3.80.186.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0169634213e2c32c9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09a8dec61ca572a2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0131c61213fea5e90",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09a8dec61ca572a2b"
            ]
          },
          "dependencies": [
            "aws_security_group.cloudra",
            "aws_subnet.cloudra",
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "module": "module.ec1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:557533685573:instance/i-0704bed6dcf1e310e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0704bed6dcf1e310e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudra",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d3127c3f912d9c4",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_ip": "10.0.1.87",
            "public_ip": "3.91.31.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-027afc3f04ab8c3d4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09a8dec61ca572a2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0131c61213fea5e90",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09a8dec61ca572a2b"
            ]
          },
          "dependencies": [
            "aws_security_group.cloudra",
            "aws_subnet.cloudra",
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06f1f04333ea089dd",
            "owner_id": "557533685573",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0128e20fbd4e0642c"
          },
          "dependencies": [
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07223440bd87b9ff4",
            "owner_id": "557533685573",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f1f04333ea089dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudra"
            },
            "vpc_id": "vpc-0128e20fbd4e0642c"
          },
          "dependencies": [
            "aws_internet_gateway.cloudra",
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad6f59cb42ca6eb0",
            "route_table_id": "rtb-07223440bd87b9ff4",
            "subnet_id": "subnet-0131c61213fea5e90"
          },
          "dependencies": [
            "aws_internet_gateway.cloudra",
            "aws_route_table.cloudra",
            "aws_subnet.cloudra",
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557533685573:security-group/sg-09a8dec61ca572a2b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a8dec61ca572a2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 port anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cloudra",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cloudra",
                "from_port": 7180,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7180
              }
            ],
            "name": "cloudra",
            "name_prefix": null,
            "owner_id": "557533685573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0128e20fbd4e0642c"
          },
          "dependencies": [
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557533685573:subnet/subnet-0131c61213fea5e90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0131c61213fea5e90",
            "map_public_ip_on_launch": true,
            "owner_id": "557533685573",
            "tags": {
              "Name": "cloudra"
            },
            "vpc_id": "vpc-0128e20fbd4e0642c"
          },
          "dependencies": [
            "aws_vpc.cloudra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557533685573:vpc/vpc-0128e20fbd4e0642c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ccb860d828766de0",
            "default_route_table_id": "rtb-0d11c7c26aaf6d6e6",
            "default_security_group_id": "sg-0fddfa948c330c1c6",
            "dhcp_options_id": "dopt-0fb66b11ed6bb529a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0128e20fbd4e0642c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d11c7c26aaf6d6e6",
            "owner_id": "557533685573",
            "tags": {
              "Name": "cloudra"
            }
          }
        }
      ]
    }
  ]
}